<resources>
    <string name="app_name">Big Data-Lernprogramm</string>
    <string name="header_title">Bitte wähle eine Lerneinheit aus.</string>
    <string name="definition">Big Data: Begriffsklärung</string>
    <string name="challenges">Big Data in der Praxis</string>
    <string name="dataquiz">Datenschutzquiz</string>
    <string name="chancesrisks">Chancen und Risiken</string>
    <string-array name="Begriffsklaerung_Menu">
        <item>Das V-Modell</item>
        <item>Begriffsabgrenzung</item>
        <item>Teste dein Wissen!</item>
    </string-array>
    <string-array name="Chancen_und_Risiken_Menu">
        <item>Wahrheit oder Fiktion</item>
        <item>Persönlichkeitsprognose</item>
    </string-array>
    <string-array name="Praxis_Menu">
        <item>Lebenszyklus &amp; Herausforderungen</item>
        <item>Wissenstest</item>
    </string-array>
    <string name="VModell_introduction">
        Die Bezeichnung „Big Data“ besitzt derzeit noch keine allgemeine Definition. Ein üblicher Ansatz zur Charakterisierung dieses Begriffs ist das sogenannte "V-Modell".\nDieses soll nicht nur technische Aspekte berücksichtigen , da es falsch wäre, Big Data nur darauf zu beschränken, sondern auch die rechtlichen und gesellschaftlichen Auswirkungen betrachten, die dieses Phänomen mit sich bringt.
    </string>
    <string name="VModell_title1">Volume</string>
    <string name="VModell_title2">Velocity</string>
    <string name="VModell_title3">Variety</string>
    <string name="VModell_title4">Value</string>
    <string name="VModell_description1">
        •	beschreibt das Ausmaß an Daten, die heutzutage gespeichert und verarbeitet werden müssen\n\n
        •	die Gesamtheit der Daten, die jemals erzeugt, gespeichert und kopiert worden ist, beträgt heutzutage 30 Zettabyte (ZB)\n\n
        •	nur zum Vergleich: ein herkömmliches Smartphone hat einen internen Speicher von 64 Gigabyte (GB); also fast 500 Milliarden mal mehr davon\n\n
        •	diese Datenmenge wird sich in sieben Jahren fast verdoppeln (Quelle: Gartner)
    </string>
    <string name="VModell_description2">
        •	repräsentiert die Geschwindigkeit, mit der Daten sich verändern und verarbeitet werden müssen\n\n
        •	die Daten sollen bei ihrer Erfassung ausgewertet und auf diese Analysen soll möglichst in Echtzeit reagiert werden
    </string>
    <string name="VModell_description3">
        •	beschreibt die Verschiedenheit der Daten bezüglich ihrer Beschaffenheit\n\n
        •	Daten können nicht nur unterschiedliche Inhalte haben, sondern auch aus unterschiedlichen Quellen stammen (z.B. Twitter- und Wetterdaten)\n\n
        •	außerdem sind sie unterschiedlich strukturiert; Z.B. hat eine Videodatei eine andere Struktur als ein Chatverlauf
    </string>
    <string name="VModell_description4">
        •	erst durch die Verarbeitung und Analyse kann der finanzielle Wert von Daten ausgeschöpft werden\n\n
        •	des Weiteren können bestimmte Daten (z.B. Personendaten) einen datenschutzrelevanten Stellenwert haben
    </string>
    <string name="Begriffsabgrenzung_introduction">
        Im Zusammenhang mit Big Data fallen manchmal auch andere Begriffe, die andere Konzepte meinen.\nDie folgenden Ausführungen sollen eine klare Unterscheidung ermöglichen.
    </string>
    <string name="Begriffsabgrenzung_title1">Cloud-Computing</string>
    <string name="Begriffsabgrenzung_title2">Internet of Things (IoT)</string>
    <string name="Begriffsabgrenzung_title3">Business Intelligence (BI)</string>
    <string name="Begriffsabgrenzung_description1">
        •	nachfragebasierte Bereitstellung von Rechenressourcen über das Internet\n\n
        •	mit \"Rechenressourcen\" ist nicht nur Speicherplatz, sondern sind z.B. auch Server, Grafikkarten, usw. gemeint
        •	die Abrechnung erfolgt i.d.R. auf der Basis des Nutzungsumfangs
    </string>
    <string name="Begriffsabgrenzung_description2">
        •	Sensoren, die in allen Arten von Produkten, Geräten und Maschinen eingebettet und über ein Netzwerk verbunden sind \n\n
        •	dadurch können jederzeit automatisch Daten, über sämtliche Dinge erhoben werden (z.B. Abstandsmessung zur Bremsassistenz)
    </string>
    <string name="Begriffsabgrenzung_description3">
        •	Gesamtheit der systematischen Erfassung,  Speicherung, Auswertung und Darstellung von historische Daten\n\n
        •	im Gegensatz zu Big Data ist hier das Ziel, überwiegend vorher definierte Fragen zu beantworten\n\n
        •	ein weiterer Unterschied ist, dass Business Intelligence eher vergangenheitsorientiert ist
    </string>
    <string name="falscheAntwort" formatted="true">Falsch! Die richtige Antwort lautet \"%1$s\".</string>
    <string name="richtigeAntwort">Das ist korrekt!</string>
    <string name="quiz_introduction">
        Willkommen zum Übungsteil!\nBitte wähle für jede Aufgabe genau eine Lösung aus.
    </string>
    <string name="quiz_finish" formatted="true">Du hast %1$d von %2$d Aufgaben richtig gelöst.</string>
    <string name="challenges_introduction">
        Big Data umfasst mehr als nur die Datenanalyse. Um diese erst durchführen zu können, müssen Daten beschafft und vorverarbeitet werden. Außerdem müssen Daten derartig analysiert werden, um Entscheidungsprozesse zu unterstützen.\nDiese ganzen Schritte, die alle Big Data-Prozesse durchlaufen, mitsamt deren Herausforderungen werden im sogenannten Big Data-Lebenszyklus dargestellt.\nDiese Lerneinheit soll das Thema \"Big Data\" aus anwenderorientierter Sicht beleuchten.
    </string>
    <string name="challenges_title1">Datenakquisition</string>
    <string name="challenges_title2">Informationsextraktion &amp; Datenbereinigung</string>
    <string name="challenges_title3">Vereinheitlichung von Daten</string>
    <string name="challenges_title4">Modellierung &amp; Analyse</string>
    <string name="challenges_title5">Interpretation</string>
    <string name="challenges_description1">
        •	Daten werden aus unterschiedlichen Quellen ggf. in Echtzeit erhoben\n\n
        •	oft ist das Problem, dass Daten nicht oder nur unzureichend zur Verfügung stehen\n\n
        •	außerdem muss geklärt werden, ob die Daten repräsentativ und für die angestrebten Zwecke verwandbar sind\n\n
        •	hier kann es zu Interessenkonflikten zwischen den Verwendern und den Bereitstellern von Daten kommen (z.B. bezüglich der Privatsphäre)\n\n
        •	der rechtliche Aspekt der Datennutzung muss berücksichtigt werden
    </string>
    <string name="challenges_description2">
        •	die erhobenen Daten werden derartig gefiltert, um relevante und unwichtige Daten voneinander zu trennen\n\n
        •   fehlerhafte Daten müssen lokalisiert und bereinigt bzw. aussortiert werden
    </string>
    <string name="challenges_description3">
        •   gesäuberte Daten aus verschiedensten Quellen müssen nun passend zusammengeführt werden (z.B. Integration von Tweets über das Wetter mit Sensordaten eines Wetterballons)\n\n
        •   im Vergleich zu den herkömmlichen Datenbanksystemen müssen moderne Systeme in der Lage sein diese enormen und vielfältig strukturierten Daten effizient zu speichern bzw. zu verarbeiten
    </string>
    <string name="challenges_description4">
        •   Analyseergebnisse müssen nach ihrer Nachvollziehbarkeit geprüft und bestätigt werden\n\n
        •   das Analysemodell benötigt stets Rückmeldungen (z.B. über die Korrektheit der getroffenen Aussagen), um verbessert werden zu können
    </string>
    <string name="challenges_description5">
        •   Analyseergebnisse werden zur Entscheidungsfindung herangezogen\n\n
        •   deswegen ist eine übersichtlich aufbereitete und nachvollziehbare Darstellungsform dieser Ergebnisse maßgeblich
    </string>
    <string name="Datenschutzquiz_introduction" formatted="true">
        Willkommen!\n\nDies ist ein Quiz der etwas anderen Sorte. Anstatt langweilige Paragraphen und Artikel zu studieren, wird hier geprüft, wie gut du dich mit dem aktuellen Datenschutzrecht auskennst.\n\nAuf diese Weise kannst du dein Wissen spielerisch erweitern und ggf. Missverständnisse ausräumen.\n\nUm dir eine kleine Hilfe zu geben, steht dir ein 50:50-Joker zur Verfügung, den du aber nur %1$dx benutzen kannst.
    </string>
    <string name="startQuiz">Beginne mit dem Quiz</string>
    <string name="finish">Beende das Quiz.</string>
    <string name="proceed">Weiter</string>
    <string name="joker">Streiche zwei falsche Antworten</string>
    <string-array name="lösungssätze">
        <item>Die Datensicherheit umfasst alle Maßnahmen zum Schutz vor unberechtigtem Datenzugriff.\nSie kann als technische Umsetzung zur Gewährleistung des Datenschutzes verstanden werden.</item>
        <item>Der Datenschutz greift immer dann, wenn personenbezogene Daten verarbeitet werden. Eine Einwilligung der Betroffenen dafür muss stets erfolgen.</item>
        <item>Personenbezogene Daten sind alle Daten, mit denen Menschen direkt bzw. indirekt identifiziert werden können (z.B. Geburtsdatum, Adresses, usw.).</item>
        <item>Da der Datenschutz nur bei der Verarbeitung personenbezogener Daten greift, muss nur hierfür stets der Verwendungszweck angegeben werden.\n\nAnonymisierte Daten sind von dieser Zweckbindung ausgenommen.</item>
        <item>Explorative Analysen, d.h. Analysen, die kein vordefiniertes Ziel haben und mit denen man neue Erkenntnisse aus Daten gewinnen möchte, sind nicht erlaubt, da das Gebot der Zweckbindung verletzt wird.\n\nDies stellt einen starken Einschnitt für Big Data-Anwender dar.</item>
        <item>Sofern dies im Vorhinein nicht vertraglich geklärt wurde, haben Betroffene keinen Anspruch auf Provision am Umsatz des Verantwortlichen der Datennalyse</item>
        <item>Die Verordnung gilt für die (automatisierte) Verarbeitung personenbezogener Daten und somit sowohl für den privaten Sektor als auch für öffentliche Verwaltungen.</item>
        <item>Vor jeder Verarbeitung von personenbezogenen Daten muss der Verantwortliche die Einwilligung von Betroffenenen einholen und diese auch rückrufen können.</item>
        <item>Zwar bezieht sich das Datenschutzrecht auf personenbezogene Daten, jedoch wird bei u.a. anonymen Daten geprüft, inwieweit (d.h. mit welchem Aufwand) diese wieder deananonymisiert werden können.</item>
    </string-array>
    <string name="wahr_oder_falsch_introduction">
        Willkommen!\n\nHier geht es darum, eine Aussage über eine Big Data-Umsetzung entweder als "Wahrheit" (grün) oder als "Lüge" (rot) zu kennzeichnen.\n\nHiermit soll geprüft, ob du das heutige positive sowie negative Potenzial von Big Data richtig einschätzen kannst.
    </string>
</resources>