<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/infoScroller"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="?attr/actionBarSize">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:text="@string/Begriffsabgrenzung_introduction"/>

        <TextView
            android:id="@+id/CCTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Begriffsabgrenzung_title1"/>

        <TextView
            android:id="@+id/CCDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:text="@string/Begriffsabgrenzung_description1"/>

        <TextView
            android:id="@+id/IoTTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Begriffsabgrenzung_title2"/>

        <TextView
            android:id="@+id/IoTDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:text="@string/Begriffsabgrenzung_description2"/>

        <TextView
            android:id="@+id/BITitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Begriffsabgrenzung_title3"/>

        <TextView
            android:id="@+id/BIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:text="@string/Begriffsabgrenzung_description3"/>
    </LinearLayout>
</ScrollView>