<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/infoScroller"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="?attr/actionBarSize">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:text="@string/VModell_introduction"/>

        <TextView
            android:id="@+id/volumeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/VModell_title1"/>

        <TextView
            android:id="@+id/volumeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:text="@string/VModell_description1"/>

        <TextView
            android:id="@+id/velocityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/VModell_title2"/>

        <TextView
            android:id="@+id/velocityDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:text="@string/VModell_description2"/>
    </LinearLayout>
</ScrollView>